force-app/main/default/objects/Eligibility__c.object
<CustomObject>
    <description>Eligibility Information</description>
    <fields>
        <fullName>Active_Enrolled_Employees__c</fullName>
        <description>Total Eligible Employees - # of Eligible Employees with Other Coverage</description>
        <formula>Total_Eligible_Employees__c - ( Eligible_Emp_w_coverage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Eligible Employees - # of Eligible Employees with Other Coverage</inlineHelpText>
        <label># of Active Enrolled Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Group_Participation__c</fullName>
        <description>Percentage of Enrolled Employees against Total Employees</description>
        <formula>( Active_Enrolled_Employees__c  / Total_Employees__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Enrolled Employees against Total Employees</inlineHelpText>
        <label>Actual Group Participation (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Total_Employees_for_prior_year__c</fullName>
        <description>The average total number of all employees on business days during the preceding calendar year, per the submitted ATNE Form</description>
        <inlineHelpText>The average total number of all employees on business days during the preceding calendar year, per the submitted ATNE Form</inlineHelpText>
        <label>Average Total Employees for prior year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-19</fullName>
                </value>
                <value>
                    <fullName>20-49</fullName>
                </value>
                <value>
                    <fullName>50-99</fullName>
                </value>
                <value>
                    <fullName>100-999</fullName>
                </value>
                <value>
                    <fullName>1000 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cobra_Type__c</fullName>
        <description>If the group employed 20 or more employees, Mini Cobra rules apply, else Federal Cobra rules apply</description>
        <formula>IF(TEXT( Group_Employed_20_Emp__c ) = &apos;No&apos;, &apos;Mini Cobra&apos;, &apos;Federal Cobra&apos;)</formula>
        <inlineHelpText>If the group employed 20 or more employees, Mini Cobra rules apply, else Federal Cobra rules apply</inlineHelpText>
        <label>Cobra Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Eligibility</relationshipLabel>
        <relationshipName>Eligibility</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Eligible_Emp_w_coverage__c</fullName>
        <description># of Eligible Employees with Other Coverage</description>
        <inlineHelpText># of Eligible Employees with Other Coverage</inlineHelpText>
        <label># of Eligible Emp w/ Other Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_Emp_wo_coverage__c</fullName>
        <description># of Eligible Employees without Other Coverage</description>
        <inlineHelpText># of Eligible Employees without Other Coverage</inlineHelpText>
        <label># of Eligible Emp w/o Other Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_First_Day__c</fullName>
        <description>Employees (Full time/Part time) as of first day of the plan year</description>
        <inlineHelpText>Employees (Full time/Part time) as of first day of the plan year</inlineHelpText>
        <label>Employees as of first day of plan year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-19</fullName>
                </value>
                <value>
                    <fullName>20-49</fullName>
                </value>
                <value>
                    <fullName>50-99</fullName>
                </value>
                <value>
                    <fullName>100-999</fullName>
                </value>
                <value>
                    <fullName>1000 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Employed_20_Emp__c</fullName>
        <description>In the preceding year, did the group employ 20 or more Full time and/or Part Time Employees on atleast 50% of its typical business days?</description>
        <inlineHelpText>In the preceding year, did the group employ 20 or more Full time and/or Part Time Employees on atleast 50% of its typical business days?</inlineHelpText>
        <label>Group Employs 20 or more FTE or PTE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_has_1099_Employees__c</fullName>
        <description>Does your company have any Individual Contractors(1099 employees) enrolling?</description>
        <inlineHelpText>Does your company have any Individual Contractors(1099 employees) enrolling?</inlineHelpText>
        <label>Group has 1099 Employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Cobra_Continuants__c</fullName>
        <label># of Cobra Continuants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Employees_RT6__c</fullName>
        <description>Total # of Employees reported on current RT-6 or Payroll</description>
        <formula>Total_Eligible_Employees__c + Number_Cobra_Continuants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total # of Employees reported on current RT-6 or Payroll</inlineHelpText>
        <label># of employees on current RT-6 Payroll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Employees_WP__c</fullName>
        <description>Number of Employees In Waiting Period</description>
        <inlineHelpText>Number of Employees In Waiting Period</inlineHelpText>
        <label># of Employees in Waiting Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participation_Requirement_Percent__c</fullName>
        <defaultValue>70</defaultValue>
        <label>Participation Requirement (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participation_Requirement__c</fullName>
        <description>Enrolling Employees needed to meet Group Participation rules</description>
        <formula>FLOOR( Total_Employees__c * (0.01 * Participation_Requirement_Percent__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enrolling Employees needed to meet Group Participation rules</inlineHelpText>
        <label>Employees Needed to Meet Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Eligibility</relationshipLabel>
        <relationshipName>Eligibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Channel__c</fullName>
        <label>Response Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEFRA_DEFRA_Medicare__c</fullName>
        <description>In the preceding or current calendar year, did the group employ 20 or more full-time and/or part-time employees during 20 or more calendar weeks?</description>
        <inlineHelpText>In the preceding or current calendar year, did the group employ 20 or more full-time and/or part-time employees during 20 or more calendar weeks?</inlineHelpText>
        <label>TEFRA/DEFRA (Medicare)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Eligible_Employees__c</fullName>
        <description>Total Number of Eligible Employees (Total - (PT + WP))</description>
        <formula>Total_Employees__c - ( Total_PartTime__c + Number_Employees_WP__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Number of Eligible Employees (Total - (PT + WP))</inlineHelpText>
        <label># of Total Eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Employees__c</fullName>
        <description>Total Employees at All Locations</description>
        <inlineHelpText>Total Employees at All Locations</inlineHelpText>
        <label>Total Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_PartTime__c</fullName>
        <description>Number of Part Time (&lt;25 hrs/wk), Seasonal (&lt;120 days/yr), Union, Terminated, OOA &amp; Other</description>
        <inlineHelpText>Number of Part Time (&lt;25 hrs/wk), Seasonal (&lt;120 days/yr), Union, Terminated, OOA &amp; Other</inlineHelpText>
        <label># of PT, Seasonal, Union &amp; Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Eligibility</label>
    <nameField>
        <displayFormat>EL-{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>